# factory_pattern

./: CMakeLists.txt  README.md  main.cpp
include/: BoxFactory.hpp  CustomSineCurve.hpp  MeshFactory.hpp  ObjectSpawner.hpp  SphereFactory.hpp
src/: CMakeLists.txt  ObjectSpawner.cpp
